# ai_agents

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  coverage.xml  main.py  pyproject.toml  requirements.txt
.byom-ai/: file_index.json
.github/workflows/: release.yml  tests.yml
agents/: agents.py  events.py  session.py
clients/: llm_client.py  response.py
configs/: configs.py  loader.py  wizard.py
context/: manager.py
devmind/: __init__.py  cli.py
examples/: README.md  basic_usage.py  custom_provider.py
prompts/: system.py
src/byom/: __init__.py  cli.py  setup.py  setup_path.py
src/byom/agent/: __init__.py  agent.py  events.py  persistence.py  session.py
src/byom/client/: llm_client.py  provider_base.py  provider_bridge.py  response.py
src/byom/client/providers/: __init__.py  openai_provider.py
src/byom/commands/: base.py  core.py  registry.py
src/byom/config/: __init__.py  config.py  loader.py
src/byom/context/: compaction.py  manager.py
src/byom/hooks/: hook_system.py
src/byom/prompts/: __init__.py  system.py
src/byom/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py  presets.py  registry.py
src/byom/safety/: approval.py
src/byom/tools/: base.py  discovery.py  registry.py  subagents.py  tool_call_parser.py
src/byom/tools/builtin/: __init__.py  edit_file.py  find.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
src/byom/tools/mcp/: client.py  mcp_manager.py  mcp_tool.py
src/byom/ui/: __init__.py  constants.py  theme.py  tool_renderer.py  tui.py
src/byom/utils/: errors.py  file_indexer.py
tests/: __init__.py  conftest.py  test_agent_integration.py  test_basic.py  test_cli.py  test_config.py  test_providers.py  test_tool_calling.py  test_tools.py  test_ui.py  test_utils.py
tools/: base.py  discovery.py  register_tools.py  subagents.py
tools/builtin/: __init__.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
tools/mcp/: client.py  mcp_ manager.py  mcp_tool.py
ui/: tui.py
utils/: errors.py  paths.py  text.py
