[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devmind-ai"
version = "0.1.0"
description = "DevMind - An intelligent AI coding agent for terminal-based development assistance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Abhishek"}
]
keywords = ["ai", "coding-assistant", "cli", "agent", "developer-tools", "openai", "claude", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.3.1",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "tomli>=2.4.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyfiglet>=0.8.0",
    "ruff>=0.14.13",
    "setuptools>=80.9.0",
    "ddgs>=9.10.0",
    "fastmcp>=2.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/devmind-ai"
Documentation = "https://github.com/yourusername/devmind-ai#readme"
Repository = "https://github.com/yourusername/devmind-ai"
Issues = "https://github.com/yourusername/devmind-ai/issues"

[project.scripts]
devmind = "devmind.cli:main"

[tool.setuptools]
packages = ["devmind", "agents", "clients", "configs", "context", "prompts", "tools", "tools.builtin", "ui", "utils"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=. --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["agents", "clients", "configs", "context", "prompts", "tools", "ui", "utils"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
