[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byom-ai-agents"
version = "0.1.0"
description = "BYOM AI Agents - A terminal-based AI coding agent that works with any LLM provider (OpenAI, Anthropic, Google, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Abhishek"}
]
keywords = ["ai", "byom", "coding-assistant", "cli", "agent", "developer-tools", "openai", "claude", "gemini", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
    "Environment :: Console",
]

dependencies = [
    "click>=8.3.1",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "tomli>=2.4.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyfiglet>=0.8.0",
    "ruff>=0.14.13",
    "setuptools>=80.9.0",
    "ddgs>=9.10.0",
    "fastmcp>=2.14.3",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/abhishek-dev/byom-ai-agents"
Documentation = "https://github.com/abhishek-dev/byom-ai-agents#readme"
Repository = "https://github.com/abhishek-dev/byom-ai-agents"
Issues = "https://github.com/abhishek-dev/byom-ai-agents/issues"

[project.scripts]
byom = "byom.cli:main"

[tool.setuptools]
packages = {"find" = {"where" = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["byom"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
